# RustProject

revolt_api/: Cargo.toml
revolt_api/src/: error.rs  lib.rs  util.rs
revolt_api/src/api/: auth.rs  messages.rs  mod.rs  session.rs
revolt_api/src/client/: client.rs  mod.rs
revolt_api/src/types/: auth.rs  bulk_message_response.rs  error_types.rs  message.rs  mod.rs  session.rs  user.rs  websocket.rs
revolt_api/src/websocket/: event_handler.rs  mod.rs  websocket.rs
revolt_bot/: Cargo.toml
revolt_bot/src/: main.rs
