[package]
name = "revolt_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
async-trait = "0.1.85"
serde_urlencoded = "0.7.1"
tokio-tungstenite = {version = "0.26.1", default-features = false, features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.31"
futures = "0.3.31"
tungstenite = "0.26.1"
rmp-serde = "1.3.0"
async-recursion = "=1.0.0"
http = "1.3.1"
tokio-rustls = "0.26.2"
rustls = "0.23.26"
base64 = "0.22.1"
sha1 = "0.10.6"
ulid = "1.2.1"
webpki-roots = "0.26.8"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
