[package]
name = "revolt_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
chrono = "0.4.40"
dotenvy = "0.15.7"
rand = "0.9.0"
regex = "1.11.1"
revolt_api = { path = "../revolt_api" }
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
ulid = "1.2.1"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
